fix: profile modify